--- a/templates/submited_posts.html
+++ b/templates/submited_posts.html
@@ -16,7 +16,7 @@
 	Date: {{blog.date}}<br>
 	</small>
 	{{blog.Blog_content|safe}}<br>
-	{%if blog.pospter.about_author%}
+	{%if blog.poster.about_author%}
 		About Author: {{blog.poster.about_author}}<br>
 	{%endif%}
 	<hr><br>
