--- a/templates/post.html
+++ b/templates/post.html
@@ -9,7 +9,7 @@
 	By: {{post.Author}}<br>
 	Date: {{post.date}}<br>
 	</small>
-	{{post.Blog_content}}<br><br>
+	{{post.Blog_content |safe }}<br><br>
 		
 	<div class="card mb-3">
 		<div class="row no-gutters">
