--- a/templates/submited_posts.html
+++ b/templates/submited_posts.html
@@ -15,13 +15,13 @@
 	By: {{blog.poster.name}}<br>
 	Date: {{blog.date}}<br>
 	</small>
-	{{blog.Blog_content|safe}}<br>
+	<a href="{{url_for('Blog_Post', id=blog.id)}}", class="btn btn-secondary">{{blog.Title}}</a>
 	{%if blog.poster.about_author%}
 		About Author: {{blog.poster.about_author}}<br>
 	{%endif%}
-	<hr><br>
+	<br><br>
 	<a href="{{url_for('Blog_Post', id=blog.id)}}", class="btn btn-secondary">View Post</a>
-	{%if blog.poster.id==current_user.id%}
+	{%if blog.poster.id==current_user.id or current_user.id==1%}
 	<a href="{{url_for('edit_post', id=blog.id)}}", class="btn btn-secondary">Edit Post</a>
 	<a href="{{url_for('delete_post', id=blog.id)}}", class="btn btn-danger">Delete Post</a><br>
 	{%else%}
