--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 
 {%block content%}
 <center>
-<b>{{name}} to this Random test.</b>
+<b>{{name}}</b>
 {% if info %}
     <br/>
-    	<em style="color: green; font-size: 2em;">{{info|upper}}</em>
+    	<em style="color: black; font-size: 2em;">{{info|upper}}</em>
     <br/>
     <p>{{infob|title|safe}}</p>
         {% else %}
