--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
               <a class="nav-link" href="{{url_for('dashboard')}}">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('user_project')}}">Web Scraping Project</a>
+              <a class="nav-link" href="{{url_for('user_project')}}">Project</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{url_for('blog_post')}}">Upload</a>
