--- a/templates/project_page.html
+++ b/templates/project_page.html
@@ -1,4 +1,4 @@
-
+{%extends 'base.html'%}
 {%block content%}
 {%for message in get_flashed_messages()%}
 <div class="alert alert-success alert-dismissible fade show" role="alert">
